--- a/public_html/style_old.css
+++ b/public_html/style_old.css
@@ -2,7 +2,6 @@ body {
 	padding-top: 20px;
 	padding-bottom: 60px;
 	background-color: #1a1a1a;
-    font-family: 'Roboto', "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 /* Custom container */
 .container {
@@ -70,9 +69,8 @@ body {
 }
 .name {
 	color:white;
-	/* font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-    font-weight: 300; */
-    letter-spacing:1px
+	font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    /*font-weight: 300;*/
 }
 .mainmessage {
 	color: #f2f2f2;
@@ -197,58 +195,3 @@ h3 {
     height: 330px;
 }
 
-/* Landing page */
-.pone {
-    display: block;
-    line-height: 1;
-    /* position: absolute; */
-    left: 0;
-    min-width: 100%;
-    height: 500px;
-    max-width: 100%;
-    vertical-align: middle;
-    border: 0;
-}
-#box_1 { 
-    position: absolute;
-    top: 400px;
-    left: 190px;
-    width: 560px;
-    height: 160px;
-    background: black;
-    /* center text */
-    display: table;
-    overflow: hidden;
-}
-.innerContainer {
-    display: table-cell;
-    vertical-align: middle;
-    /*
-    width: 100%;
-    margin: 0 auto;
-    text-align: center;
-    */
-    padding-left: 50px;
-    color:white;
-}
-.indexmainmessage {
-    font-size: 41px;
-    line-height: 51px;
-    font-family: 'Roboto', sans-serif;
-    margin-bottom: 12px;
-    font-weight: 100;
-}
-.indexsubmessage {
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    line-height: 21px;
-    font-weight: 300;
-
-}
-.emma a:hover, a:visited:hover {
-    text-decoration:none;
-    color:black;
-}
-ul#social {
-    margin-top:20px;
-}
