--- a/public_html/templates/chart_types/!template_templates.html
+++ b/public_html/templates/chart_types/!template_templates.html
@@ -46,63 +46,19 @@
 	  			<li class="lead"><a href="../../templates.html">D3</a></li>
 			</ul>
 	      
-	        <p class="lead mainmessage">area templates</p>
+	        <p class="lead mainmessage">XXX chart templates</p>
 
 	        <div class="row-fluid">
 	            <ul class="thumbnails">
 	              	<li class="span4">
 	                	<div class="thumbnail">
 	                  		<div class="projectImageDiv">
-		                  		<a href="../../../d3_templates/area/areaChartMultiple/raw.html" target="_blank"><img src="../../../d3_templates/area_img/areaMultipleRaw.JPG" alt="" class="projectImageResize"></a>
-		                  	</div>
-	              			<div class="caption">
-	                			<h3>multiple area chart</h3>
-			                    <p>Multiple area charts on the same axis, with a cool zoom feature.</p>
-			                    <p><a href="../../../d3_templates/area/areaChartMultiple/raw.html" target="_blank">see example</a></p>
-	              			</div>
-	                	</div>
-	              	</li>
-	              	<li class="span4">
-	                	<div class="thumbnail">
-	                  		<div class="projectImageDiv">
-		                  		<a href="../../../d3_templates/area/areaLivestrong/netflixAreaTwo.html" target="_blank"><img src="../../../d3_templates/area_img/posNegSentiment.JPG" alt="" class="projectImageResize"></a>
-		                  	</div>
-	                 		<div class="caption">
-	                    		<h3>Pos/Neg Sentiment</h3>
-			                    <p>A way to show positive and negative </p>
-			                    <p><a href="../../../d3_templates/area/areaLivestrong/netflixAreaTwo.html">see example</a></p>
-	                  		</div>
-	                	</div>
-	              	</li>
-	              	<li class="span4">
-	                	<div class="thumbnail">
-	                  		<div class="projectImageDiv">
-		                  		<a href="../../../d3_templates/area/areaLivestrong/pos.html" target="_blank"><img src="../../../d3_templates/area_img/stdArea.JPG" alt="" class="projectImageResize"></a>
-		                  	</div>
-	                  		<div class="caption">
-	                    		<h3>standard template</h3>
-			                    <p>D3 area std template.</p>
-			                    <p><a href="../../../d3_templates/area/areaLivestrong/pos.html">see example</a></p>
-	                  		</div>
-	                	</div>
-	              	</li>
-	            </ul>
-	        </div>
-	        
-
-	        
-<!--
-			<div class="row-fluid">
-	            <ul class="thumbnails">
-	              	<li class="span4">
-	                	<div class="thumbnail">
-	                  		<div class="projectImageDiv">
-		                  		<a href="#" target="_blank"><img src="#" alt="" class="projectImageResize"></a>
+		                  		<a href="../../../d3_templates/bar/roundedbarsSoccerSimulation.html" target="_blank"><img src="../../../d3_templates/bar_img/roundedbarsSoccerSimulation.JPG" alt="" class="projectImageResize"></a>
 		                  	</div>
 	              			<div class="caption">
 	                			<h3>d3 template one</h3>
 	                			<p class="projectdescription"></p>
-	                			<p><a href="#" target="_blank">see example</a></p>
+	                			<p><a href="../../../d3_templates/bar/roundedbarsSoccerSimulation.html" target="_blank">see example</a></p>
 	              			</div>
 	                	</div>
 	              	</li>
@@ -133,8 +89,49 @@
 	            </ul>
 	        </div>
 
+	        <div class="row-fluid">
+	            <ul class="thumbnails">
+	              	<li class="span4">
+	                	<div class="thumbnail">
+	                  		<div class="projectImageDiv">
+		                  		<a href="../../../d3_templates/bar/roundedbarsSoccerSimulation.html" target="_blank"><img src="../../../d3_templates/bar_img/roundedbarsSoccerSimulation.JPG" alt="" class="projectImageResize"></a>
+		                  	</div>
+	              			<div class="caption">
+	                			<h3>d3 template one</h3>
+	                			<p class="projectdescription"></p>
+	                			<p><a href="../../../d3_templates/bar/roundedbarsSoccerSimulation.html" target="_blank">see example</a></p>
+	              			</div>
+	                	</div>
+	              	</li>
+	              	<li class="span4">
+	                	<div class="thumbnail">
+	                  		<div class="projectImageDiv">
+		                  		<a href="#"><img src="#" alt="" class="projectImageResize"></a>
+		                  	</div>
+	                 		<div class="caption">
+	                    		<h3>d3 template two</h3>
+	                    		<p class="projectdescription"></p>
+	                    		<p><a href="#">see example</a></p>
+	                  		</div>
+	                	</div>
+	              	</li>
+	              	<li class="span4">
+	                	<div class="thumbnail">
+	                  		<div class="projectImageDiv">
+		                  		<a href="#"><img src="#" alt="" class="projectImageResize"></a>
+		                  	</div>
+	                  		<div class="caption">
+	                    		<h3>d3 template three</h3>
+	                    		<p class="projectdescription"></p>
+	                    		<p><a href="#">see example</a></p>
+	                  		</div>
+	                	</div>
+	              	</li>
+	            </ul>
+	        </div>
 
-
+	        
+<!--
 	        <div class="row-fluid">
 	            <ul class="thumbnails">
 	              	<li class="span4">
